--- a/package.json
+++ b/package.json
@@ -12,10 +12,19 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@babel/eslint-parser": "^7.19.1",
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/proxy": "^2.1.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "^1.12.3",
     "core-js": "^3.25.3",
+    "eslint": "^8.30.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.8.0",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
@@ -23,15 +32,5 @@
     "vuetify": "^2.6.10",
     "vuex": "^4.1.0"
   },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/eslint-config": "^11.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "eslint": "^8.24.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-vue": "^9.5.1"
-  }
+  "devDependencies": {}
 }
